# Foundry-Hosted-Agent-MAF

./: .dockerignore  .env.example  .gitignore  1-local-model.py  2-foundry-model.py  3-foundry-iq.py  4-toolbox.py  5-hosted-agent.py  Dockerfile  README.md  agent.yaml  create-knowledge-base.py  create-toolbox.py  pyproject.toml  test-hosted-agent-locally.py  test.json
data/hr-kb/: 00-employee-handbook-overview.md  01-leave-and-vacation-policy.md  02-public-holidays.csv  03-parental-and-family-leave.md  04-sick-leave-policy.md  05-working-hours-policy.md  06-remote-and-hybrid-work.md  07-compensation-and-salary.md  08-benefits-and-pension.md  09-30-percent-ruling.md  10-code-of-conduct.md  11-dei-policy.md  12-grievance-and-whistleblower.md  13-travel-and-expense.md  14-training-and-development.md  15-onboarding-checklist.md  16-data-protection-gdpr.md  17-health-and-safety.md  18-termination-and-notice.md  19-faq.md
