[project]
name = "maf-demos"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agent-framework==1.3.0",
    "agent-framework-openai==1.3.0",
    "azure-identity==1.25.3",
    "azure-search-documents==12.0.0",
    "azure-storage-blob==12.28.0",
    "httpx==0.28.1",
    "mcp==1.27.1",
    "python-dotenv==1.2.2",
    "rich==15.0.0",
]
